Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28131

QtCreator/Catch2 - A test that throws an exception is shown without error

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 9.0.0-beta1
    • Qt Creator 8.0.1
    • Test Integration
    • None
    • Windows 10 22H2 (Build 19045.1949)
      Catch2 3.1.0
      CMake 3.20.2
      Ninja 1.10.2
    • Windows
    • babcdc7d10 (qt-creator/qt-creator/master) babcdc7d10 (qt-creator/qt-creator/qds-dev) babcdc7d10 (qt-creator/qt-creator/9.0)

    Description

      If there is an exception thrown in a section the result in QtCreator is just missing:

      The attached Output.xml contains error“s that seem to be ignored.
      Overall it looks like the tests completed successfully.

      Attachments

        1. Output.xml
          37 kB
          Marscho
        2. image-2022-09-04-09-29-11-999.png
          49 kB
          Marscho
        For Gerrit Dashboard: QTCREATORBUG-28131
        # Subject Branch Project Status CR V

        Activity

          People

            cstenger Christian Stenger
            Marscho Marscho
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes