AutoTest: Report exceptions when running Catch2 tests

Inform the user about occurred exceptions and stop ignoring them.

Fixes: QTCREATORBUG-28131
Change-Id: I24b2677aead06ea32ce8ac6a01bab68b0c4eb592
Reviewed-by: David Schulz <david.schulz@qt.io>